--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -11,10 +11,6 @@
     font-family: "Barlow Condensed", sans-serif;
 }
 
-.bg-img {
-    background-image: url(../images/png/bgsvg.png);
-}
-
 .linear-wipe {
     background: radial-gradient(127.22% 415.03% at -16.43% 122.04%, #EA15BC 0%, #4E3BFF 50%, #0097FF 100%);
     background-size: 200% auto;
@@ -33,9 +29,54 @@
     }
 }
 
-.jdh {
-    color: #ffffff59;
+.gradient-border-mask3::before {
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 0;
+    z-index: -1;
+    right: 0;
+    bottom: 0;
+    border-radius: 30px;
+    border: 2px solid transparent;
+    background: linear-gradient(180deg, rgba(255, 255, 255, 0) 15.6%, #2B3A81 100%) border-box;
+    -webkit-mask:
+        linear-gradient(#fff 0 0) padding-box,
+        linear-gradient(#fff 0 0);
+    mask: linear-gradient(#fff 0 0) padding-box,
+        linear-gradient(#fff 0 0);
+    -webkit-mask-composite: destination-out;
+    mask-composite: exclude;
 }
+
+.gradient-text {
+    background: radial-gradient(116.25% 380.93% at -5.46% 117.14%, rgba(152, 49, 255, 0.5) 0%, rgba(255, 102, 255, 0.75) 100%)    ;
+    background-size: 200% 200%;
+    animation: rainbow 2s ease-in-out infinite;
+    background-clip: text;
+    -webkit-background-clip: text;
+    transition: color .2s ease-in-out;
+}
+
+.gradient-text:hover {
+    color: rgba(0, 0, 0, 0);
+}
+
+@keyframes rainbow {
+    0% {
+        background-position: left
+    }
+
+    50% {
+        background-position: right
+    }
+
+    100% {
+        background-position: left
+    }
+}
+
+/* group-hover:first-letter:text-lightdarkgreen group-hover:first-letter:text-lightdarkgreen group-hover:first-letter:text-lightdarkgreen group-hover:first-letter:text-lightdarkgreen */
 
 @media (max-width:1200px) {
     .smallscreen {
